# gitsafe

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.prebuilt  Makefile  README.md  config.yaml.example  gp_to_mesh.py  repository.json  run-hooks.sh
.githooks/: pre-commit
.github/workflows/: ci.yml
api/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.prebuilt  config.yaml.example  demo.sh
api/src/: auth.rs  config.rs  config_persistence.rs  encryption.rs  error.rs  git.rs  handlers.rs  lib.rs  main.rs  middleware.rs  scheduler.rs  webhooks.rs
api/tests/: api_tests.rs  auth_test.rs  config_test.rs  encryption_test.rs  git_test.rs  webhooks_test.rs
gitsafe/: Dockerfile  README.md  config.yaml  run.sh
ha-addon/: Dockerfile  build.yaml  config.yaml  run.sh
scripts/: setup-hooks.sh
src/: auth.rs  auth_test.rs  config.rs  config_test.rs  error.rs  git.rs  handlers.rs  lib.rs  main.rs  scheduler.rs
tests/: api_tests.rs
web/: .gitignore  README.md  bunfig.toml  index.html  package.json  vite.config.ts  vitest.config.ts
web/.storybook/: main.ts  preview.ts  preview.tsx
web/src/: App.css  App.tsx  index.css  main.tsx  types.ts  utils.test.ts  utils.ts
web/src/api/: client.ts
web/src/components/: Autocomplete.css  Autocomplete.stories.tsx  Autocomplete.tsx  BatchAddDialog.stories.tsx  BatchAddDialog.tsx  CredentialManagementDialog.css  CredentialManagementDialog.stories.tsx  CredentialManagementDialog.tsx  Dashboard.css  Dashboard.stories.tsx  Dashboard.tsx  FilterPanel.css  FilterPanel.stories.tsx  FilterPanel.tsx  Notification.css  Notification.stories.tsx  Notification.tsx  NotificationContainer.stories.tsx  NotificationContainer.tsx  NotificationSystem.stories.tsx  RepositoryAddDialog.stories.tsx  RepositoryAddDialog.tsx  RepositoryEditDialog.css  RepositoryEditDialog.stories.tsx  RepositoryEditDialog.tsx  RepositoryTile.css  RepositoryTile.stories.tsx  RepositoryTile.tsx  Stats.css  Stats.stories.tsx  Stats.tsx  ThemeSelector.css  ThemeSelector.tsx
web/src/contexts/: NotificationContext.tsx  ThemeContext.tsx
