[package]
name = "gitsafe"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-rt = "2.10"
tokio = { version = "1.41", features = ["full"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1.0"
config = "0.15.19"
git2 = "0.20.2"
auth-git2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
tar = "0.4"
flate2 = "1.0"
jsonwebtoken = "10.2.0"
bcrypt = "0.17.1"
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
tokio-cron-scheduler = "0.15.1"
tempfile = "3.13"

[dev-dependencies]
actix-rt = "2.10"
