[package]
name = "gitsafe"
version = "0.1.1"
edition = "2021"

[dependencies]
actix-web = "4.12.1"
actix-files = "0.6.9"
actix-rt = "2.10"
tokio = { version = "1.41", features = ["full"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1.0"
config = "0.15.19"
git2 = { version = "0.20.2", features = ["vendored-openssl"] }
auth-git2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
tar = "0.4"
flate2 = "1.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
bcrypt = "0.17.1"
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
tokio-cron-scheduler = "0.15.1"
tempfile = "3.13"
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
url = "2.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[dev-dependencies]
actix-rt = "2.10"
